Prevent bsky avatars from spilling out of page due to negative margin

--- a/src/_sass/_post.scss
+++ b/src/_sass/_post.scss
@@ -410,6 +410,7 @@
 .post__likes {
   margin-bottom: 2rem;
   min-height: 400px;
+  padding-right: 1rem;
 }
 
 .post__likesTitle {
@@ -447,8 +448,6 @@
 }
 
 .post__like__avatar {
-  width: 4rem;
-  aspect-ratio: 1/1;
   border-radius: 100%;
 }
 
